<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/topBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/top_bar"
            android:scaleType="center"
            android:contentDescription="@string/top_bar"/>

        <ImageView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/movie_details"
        android:scaleType="center"
        android:contentDescription="@string/movie_details"/>

        <ImageView
            android:id="@+id/booking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:src="@drawable/booking_details"
            android:scaleType="center"
            android:contentDescription="@string/booking_details"/>

        <ImageView
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:src="@drawable/line"
            android:scaleType="center"
            android:contentDescription="Line"/>

        <TextView
            android:id="@+id/tvSummaryMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center"
            android:textStyle="bold|italic"
            android:text="@string/movie_name_placeholder"
            android:textColor="#FFFFFF"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tvSummarySeats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/number_of_seats_placeholder"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:src="@drawable/line"
            android:scaleType="center"
            android:contentDescription="Line"/>

        <TextView
            android:id="@+id/tvSummaryPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:textStyle="bold"
            android:text="@string/total_price_placeholder"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnSendTicket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:text="@string/send_ticket"
            android:textColor="#FFFFFF" />
    </LinearLayout>
</ScrollView>