<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <ImageView
        android:id="@+id/CineFAST2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="-6dp"
        android:scaleType="fitStart"
        android:src="@drawable/cinefast" />

    <TextView
        android:id="@+id/SelectDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginStart="13dp"
        android:scaleType="fitStart"
        android:text="@string/select_items"
        android:textColor="#A6A1A1" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snacks_drinks"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"/>

    <ListView
        android:id="@+id/lvSnacks"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@android:color/transparent"
        android:dividerHeight="12dp"/>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/confirm"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:backgroundTint="#FF0000"
        android:textAllCaps="false"/>
</LinearLayout>