<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/CineFAST"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:scaleType="fitStart"
            android:src="@drawable/CineFAST" />

        <TextView
            android:id="@+id/SelectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/select_date"
            android:textColor="#A6A1A1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#000000"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgMovie1"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/movie1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#171B2F"
                android:orientation="vertical"
                android:paddingStart="16dp">

                <TextView
                    android:id="@+id/tvMovie1Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_sixth_sense"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMovie1Genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/horror_1h_47m"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnTrailer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/watch_trailer"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/btnBook1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/book_seats"
                    android:backgroundTint="#FF0000"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#000000"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgMovie2"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/movie2" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#171B2F"
                android:orientation="vertical"
                android:paddingStart="16dp">

                <TextView
                    android:id="@+id/tvMovie2Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_wizard_of_oz"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMovie2Genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/fantasy_1h_52m"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnTrailer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/watch_trailer"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/btnBook2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/book_seats"
                    android:backgroundTint="#FF0000"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#000000"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgMovie3"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/movie3" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#171B2F"
                android:orientation="vertical"
                android:paddingStart="16dp">

                <TextView
                    android:id="@+id/tvMovie3Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/the_omen"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMovie3Genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/horror_1h_50m"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnTrailer3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/watch_trailer"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/btnBook3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/book_seats"
                    android:backgroundTint="#FF0000"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#000000"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:id="@+id/imgMovie4"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/movie4" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#171B2F"
                android:orientation="vertical"
                android:paddingStart="16dp">

                <TextView
                    android:id="@+id/tvMovie4Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/misery"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvMovie4Genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/thriller_2h_10m"
                    android:textColor="#FFFFFF" />

                <Button
                    android:id="@+id/btnTrailer4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/watch_trailer"
                    android:backgroundTint="#FFFFFF"
                    android:textColor="#000000" />

                <Button
                    android:id="@+id/btnBook4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/book_seats"
                    android:backgroundTint="#FF0000"
                    android:textColor="#FFFFFF" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>